@@ -4,7 +4,7 @@ use strict;
 use warnings;
 
 package Mail::DKIM;
-our $VERSION = '0.14';
+our $VERSION = '0.15';
 
 1;
 __END__
